[gd_scene load_steps=15 format=3 uid="uid://dthey8a8gih4d"]

[ext_resource type="Script" path="res://scenes/register.gd" id="1_kmbou"]
[ext_resource type="Texture2D" uid="uid://dao31u1ixkxba" path="res://assets/img/6dles8r4h9y51.png" id="2_6t6qu"]
[ext_resource type="FontFile" uid="uid://cbee8yk1on1qo" path="res://assets/fonts/KnightsQuest.ttf" id="4_ehudg"]

[sub_resource type="LabelSettings" id="LabelSettings_bthd8"]
font = ExtResource("4_ehudg")
font_size = 82
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1kh4x"]
bg_color = Color(0.105882, 0.105882, 0.105882, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ixh2"]
bg_color = Color(0.105882, 0.105882, 0.105882, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_407e8"]
bg_color = Color(0.294118, 0.054902, 0.0745098, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.819608, 0.643137, 0.101961, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rxwvx"]
bg_color = Color(0.435294, 0.0352941, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.819608, 0.643137, 0.101961, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cd4ev"]
bg_color = Color(0.494118, 0.0470588, 0, 1)
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.819608, 0.643137, 0.101961, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_haa0c"]
bg_color = Color(0.294118, 0.054902, 0.0745098, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.819608, 0.643137, 0.101961, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_octxr"]
bg_color = Color(0.435294, 0.0352941, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.819608, 0.643137, 0.101961, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6pi76"]
bg_color = Color(0.494118, 0.0470588, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.819608, 0.643137, 0.101961, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rtbbk"]

[sub_resource type="LabelSettings" id="LabelSettings_trvcd"]
font = ExtResource("4_ehudg")
font_size = 22

[node name="Register" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kmbou")

[node name="6Dles8r4h9y51" type="Sprite2D" parent="."]
position = Vector2(425, 195)
scale = Vector2(0.26375, 0.214444)
texture = ExtResource("2_6t6qu")

[node name="Login2" type="Label" parent="."]
layout_mode = 0
offset_top = 10.0
offset_right = 844.0
offset_bottom = 90.0
text = "Create a profile"
label_settings = SubResource("LabelSettings_bthd8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Username2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 276.0
offset_top = 108.0
offset_right = 576.0
offset_bottom = 139.0
theme_override_fonts/font = ExtResource("4_ehudg")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_1kh4x")
placeholder_text = "Enter your username"
alignment = 1

[node name="Password3" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 277.0
offset_top = 151.0
offset_right = 577.0
offset_bottom = 182.0
theme_override_fonts/font = ExtResource("4_ehudg")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_1ixh2")
placeholder_text = "Enter your password"
alignment = 1

[node name="Password4" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 277.0
offset_top = 196.0
offset_right = 577.0
offset_bottom = 227.0
theme_override_fonts/font = ExtResource("4_ehudg")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_1ixh2")
placeholder_text = "Repeat your password"
alignment = 1

[node name="Login" type="Button" parent="."]
layout_mode = 0
offset_left = 307.0
offset_top = 246.0
offset_right = 557.0
offset_bottom = 277.0
theme_override_fonts/font = ExtResource("4_ehudg")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_407e8")
theme_override_styles/hover = SubResource("StyleBoxFlat_rxwvx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cd4ev")
text = "Create account"

[node name="back2" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 27.0
offset_top = 336.0
offset_right = 127.0
offset_bottom = 367.0
theme_override_styles/normal = SubResource("StyleBoxFlat_haa0c")
theme_override_styles/hover = SubResource("StyleBoxFlat_octxr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6pi76")
text = "Back"

[node name="Login3" type="Button" parent="."]
layout_mode = 0
offset_left = 486.0
offset_top = 299.0
offset_right = 602.0
offset_bottom = 330.0
theme_override_colors/font_color = Color(0.909804, 0, 0.12549, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("4_ehudg")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxEmpty_rtbbk")
text = "Login here!"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 266.0
offset_top = 303.0
offset_right = 488.0
offset_bottom = 326.0
text = "Already have an account?"
label_settings = SubResource("LabelSettings_trvcd")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ErrorLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 27.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[connection signal="button_down" from="Login" to="." method="_on_login_button_down"]
[connection signal="pressed" from="back2" to="." method="_on_back_2_pressed"]
[connection signal="pressed" from="Login3" to="." method="_on_login_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
